--- a/PopularMovies/app/src/main/res/layout/fragment_detail.xml
+++ b/PopularMovies/app/src/main/res/layout/fragment_detail.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_height="match_parent"
@@ -70,4 +70,4 @@
 
 
     </RelativeLayout>
-</ScrollView>
+</android.support.v4.widget.NestedScrollView>
