--- a/PopularMovies/app/src/main/res/values/colors.xml
+++ b/PopularMovies/app/src/main/res/values/colors.xml
@@ -3,4 +3,6 @@
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
+    <color name="ripple_material_dark">#cccccc</color>
+    <color name="grey">#cccccc</color>
 </resources>
