--- a/PopularMovies/app/src/main/res/layout-sw600dp/content_main.xml
+++ b/PopularMovies/app/src/main/res/layout-sw600dp/content_main.xml
@@ -2,9 +2,11 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:baselineAligned="false"
     android:divider="?android:attr/dividerHorizontal"
     android:orientation="horizontal"
+    app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context="com.example.ashishbahl.popularmovies.MainActivity">
 
     <!--
