--- a/PopularMovies/app/src/main/res/layout/fragment_main.xml
+++ b/PopularMovies/app/src/main/res/layout/fragment_main.xml
@@ -9,6 +9,8 @@
     android:horizontalSpacing="2dp"
     android:stretchMode="columnWidth"
     android:padding="1dp"
+    android:drawSelectorOnTop="true"
+    android:choiceMode="singleChoice"
     tools:context=".MainFragment"
     android:id="@+id/movie_grid">
 </GridView>
