--- a/PopularMovies/app/src/main/res/layout/movie_item.xml
+++ b/PopularMovies/app/src/main/res/layout/movie_item.xml
@@ -1,7 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ImageView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
+<FrameLayout
     android:layout_height="match_parent"
-    android:padding="0dp"
-    android:id="@+id/movie_image"
-    android:adjustViewBounds="true" />
+    android:layout_width="match_parent"
+    xmlns:android="http://schemas.android.com/apk/res/android">
+
+    <ImageView xmlns:android="http://schemas.android.com/apk/res/android"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:padding="0dp"
+        android:id="@+id/movie_image"
+        android:adjustViewBounds="true" />
+
+    <View android:layout_height="match_parent"
+        android:layout_width="match_parent"
+        android:background="@drawable/touch_selector"/>
+
+</FrameLayout>
