--- a/PopularMovies/app/src/main/res/values/colors.xml
+++ b/PopularMovies/app/src/main/res/values/colors.xml
@@ -4,5 +4,6 @@
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
     <color name="ripple_material_dark">#cccccc</color>
+    <color name="light_blue">#ff64c2f4</color>
     <color name="grey">#cccccc</color>
 </resources>
